Fix spacing in coding

--- a/css/main.css
+++ b/css/main.css
@@ -8,33 +8,40 @@ img {
   width: 100%;
 }
 
-h1,h2 {
+h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
 }
+
 figcaption {
   font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
+
 nav {
   font-size: 1.125rem;
   font-weight:bold;
 }
+
 nav ol {
   list-style-type: none;
 }
+
 nav a {
   color: #793284;
   text-decoration: none;
 }
-nav a:hover {
+
+nav a: hover {
   color:#b42885;
   text-decoration: underline;
 }
+
 .intro {
   font-size: 1rem;
 }
+
 nav, h1, h2 {
-  font-family: 'Patua One', cursive
+  font-family: "Patua One", cursive
 }
